--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js prod",
+    "start": "nodemon app.js",
     "dev": "node app.js dev"
   },
   "author": "",
