--- a/package.json
+++ b/package.json
@@ -4,25 +4,32 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --recursive ./test --exit",
     "start": "nodemon app.js || true",
-    "dev": "node app.js dev"
+    "dev": "node app.js dev",
+    "coverage": "nyc --reporter html --reporter text npm test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ajv": "^6.10.0",
+    "assert": "^1.4.1",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "istanbul": "^0.4.5",
     "jsonwebtoken": "^8.5.0",
+    "mocha": "^6.0.2",
     "mongoose": "^5.4.19",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nodemon": "^1.18.10",
+    "nyc": "^13.3.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
